Configuración de firefox desde el runtime de java.